BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_F_RischiDiretti_Data_Acc__c.field-meta.xml
<CustomField>
    <fullName>CRM_F_RischiDiretti_Data_Acc__c</fullName>
    <formula>IF(
ISBLANK(CRM_RischiDiretti_Data_Acc__c), null, 
IF(
AND(
DAY(CRM_RischiDiretti_Data_Acc__c) &lt;= 9,
MONTH(CRM_RischiDiretti_Data_Acc__c) &lt;= 9
),
&quot;0&quot; &amp; TEXT( DAY(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_RischiDiretti_Data_Acc__c)),
IF(
DAY(CRM_RischiDiretti_Data_Acc__c) &lt;= 9,
&quot;0&quot; &amp; TEXT( DAY(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_RischiDiretti_Data_Acc__c)),
IF(
MONTH(CRM_RischiDiretti_Data_Acc__c) &lt;= 9,
TEXT( DAY(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_RischiDiretti_Data_Acc__c)),
TEXT( DAY(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; TEXT(MONTH(CRM_RischiDiretti_Data_Acc__c))
&amp; &quot;/&quot; &amp; TEXT(YEAR(CRM_RischiDiretti_Data_Acc__c))
))))</formula>
    <label>CRM_F_RischiDiretti_Data_Acc</label>
    <type>Text</type>
</CustomField>