BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Fatturato1000__c.field-meta.xml
<CustomField>
    <fullName>CRM_Fatturato1000__c</fullName>
    <formula>CRM_FatturatoPeriodo1__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fatturato ultimo es disponibile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>