BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FatturatoPeriodo1__c.field-meta.xml
<CustomField>
    <fullName>CRM_FatturatoPeriodo1__c</fullName>
    <label>Fatturato ultimo esercizio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>