BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FatturatoPeriodo2__c.field-meta.xml
<CustomField>
    <fullName>CRM_FatturatoPeriodo2__c</fullName>
    <label>Fatturato penultimo es disp (x1000)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>