BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FatturatoPeriodo3__c.field-meta.xml
<CustomField>
    <fullName>CRM_FatturatoPeriodo3__c</fullName>
    <label>Fatturato - Periodo 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>