BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FluCRAccSistemaMesePrec__c.field-meta.xml
<CustomField>
    <fullName>CRM_FluCRAccSistemaMesePrec__c</fullName>
    <label>FlussoCR Accordato Sist. Mese Precedente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>