BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FlussoCRTotAccGruppo__c.field-meta.xml
<CustomField>
    <fullName>CRM_FlussoCRTotAccGruppo__c</fullName>
    <formula>CRM_GrupCRCrdtCassAcc__c + CRM_GrupCRCrdtFirmAcc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flusso CR tot. accordato - Gruppo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>