BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FlussoCRTotaleAccordatoBanca__c.field-meta.xml
<CustomField>
    <fullName>CRM_FlussoCRTotaleAccordatoBanca__c</fullName>
    <formula>CRM_BancCRCrdtCassAcc__c + CRM_BancCRCrdtFirmAcc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flusso CR tot. Accordato Banca</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>