BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FlussoCRTotaleUtilizzatoBanca__c.field-meta.xml
<CustomField>
    <fullName>CRM_FlussoCRTotaleUtilizzatoBanca__c</fullName>
    <formula>CRM_BancCRCrdtCassUti__c + CRM_BancCRCrdtFirmUti__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flusso CR tot. Utilizzato Banca</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>