BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FlussoCRTotUtilizzatoGruppo__c.field-meta.xml
<CustomField>
    <fullName>CRM_FlussoCRTotUtilizzatoGruppo__c</fullName>
    <formula>CRM_GrupCRCrdtCassUti__c + CRM_GrupCRCrdtFirmUti__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flusso CR tot. utilizzato - Gruppo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>