BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FlussoCRTotUtilizzatoSistema__c.field-meta.xml
<CustomField>
    <fullName>CRM_FlussoCRTotUtilizzatoSistema__c</fullName>
    <formula>CRM_SistCRCrdtCassUti__c + CRM_SistCRCrdtFirmUti__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flusso CR tot. utilizzato - Sistema</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>