BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FlussoCRTotVarGruppo__c.field-meta.xml
<CustomField>
    <fullName>CRM_FlussoCRTotVarGruppo__c</fullName>
    <formula>IF (
				OR (
								ISBLANK(CRM_FlussoCRTotUtilizzatoGruppo__c) = true,
								ISBLANK(CRM_FlussoCRTotAccGruppo__c) = true
				),
				NULL,
    CRM_FlussoCRTotUtilizzatoGruppo__c/CRM_FlussoCRTotAccGruppo__c
)</formula>
    <label>Tot. % U/A - Gruppo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>