BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FondiComuniInvestimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_FondiComuniInvestimento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fondi comuni di investimento</label>
    <type>Checkbox</type>
</CustomField>