BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FondiESicav__c.field-meta.xml
<CustomField>
    <fullName>CRM_FondiESicav__c</fullName>
    <label>Fondi e sicav</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>