BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormRepMargServMeseCorr__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepMargServMeseCorr__c</fullName>
    <formula>CRM_MargineServiziMeseCorrente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margine da servizi - anno in corso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>