BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormRepRaccCompl__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormRepRaccCompl__c</fullName>
    <formula>CRM_RaccoltaComplessivaMeseCorrente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raccolta Complessiva - anno in corso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>