BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormulaIconaPercCS1__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaIconaPercCS1__c</fullName>
    <formula>IF (
				CRM_CrossSellingABI__c = 0,
				NULL,
				IF (
				    OR(CRM_CrossSellingABI__c = 1, CRM_CrossSellingABI__c = 2),
								IMAGE(&apos;/resource/CS_1_4&apos;, &quot;1/4&quot;,18,18),
								IF (
												CRM_CrossSellingABI__c &gt; 10,
												IMAGE(&apos;/resource/CS_4_4&apos;, &quot;4/4&quot;,18,18),
												IF (
																OR (
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Assente&apos;, 
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Residuale&apos;,
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Non portafogliati&apos;, 
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = NULL, 
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Controparti Istituzionali&apos;,
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Consulenti Finanziari&apos;,
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Enti e Tesorerie&apos;,
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;POE&apos;
																),
																IF (
																				OR (CRM_CrossSellingABI__c = 1, CRM_CrossSellingABI__c = 2),
																				IMAGE(&apos;/resource/CS_1_4&apos;, &quot;1/4&quot;,18,18),
																				IF (
																								OR (CRM_CrossSellingABI__c = 3, CRM_CrossSellingABI__c = 4),
																								IMAGE(&apos;/resource/CS_2_4&apos;, &quot;2/4&quot;,18,18),
																								IF (
																												OR (CRM_CrossSellingABI__c = 5, CRM_CrossSellingABI__c = 6),
																												IMAGE(&apos;/resource/CS_3_4&apos;, &quot;3/4&quot;,18,18),
																												IF (
																																CRM_CrossSellingABI__c &gt; 6,
																																IMAGE(&apos;/resource/CS_4_4&apos;, &quot;4/4&quot;,18,18), NULL
																												)
																								)
																				)
																),
																IF (
																				TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Family&apos;,
																				IF (
																								OR (CRM_CrossSellingABI__c = 3, CRM_CrossSellingABI__c = 4),
																								IMAGE(&apos;/resource/CS_2_4&apos;, &quot;2/4&quot;,18,18),
																								IF (
																												OR (CRM_CrossSellingABI__c = 5, CRM_CrossSellingABI__c = 6),
																												IMAGE(&apos;/resource/CS_3_4&apos;, &quot;3/4&quot;,18,18), 
																												IF (
																																AND (CRM_CrossSellingABI__c &gt;= 7, CRM_CrossSellingABI__c &lt;= 10),
																																IMAGE(&apos;/resource/CS_4_4&apos;, &quot;4/4&quot;,18,18), NULL
																												)
																								)
																				),
																				NULL
																)
												)
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula icona percentuale CS - parte 1</label>
    <type>Text</type>
</CustomField>