BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormulaIconaPercCS2__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaIconaPercCS2__c</fullName>
    <formula>IF (
				OR (
								TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Personal&apos;, 
								TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Small Business&apos;, 
								TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Corporate&apos;, 
								TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Large Corporate&apos;
				),
				IF (
								CRM_CrossSellingABI__c = 3,
								IMAGE(&apos;/resource/CS_1_4&apos;, &quot;1/4&quot;,18,18),
								IF (
												OR (CRM_CrossSellingABI__c = 4, CRM_CrossSellingABI__c = 5),
												IMAGE(&apos;/resource/CS_2_4&apos;, &quot;2/4&quot;,18,18),
												IF (
																AND (CRM_CrossSellingABI__c &gt;= 6, CRM_CrossSellingABI__c &lt;= 8),
																IMAGE(&apos;/resource/CS_3_4&apos;, &quot;3/4&quot;,18,18),
																IF (
																				AND(CRM_CrossSellingABI__c &gt;= 9, CRM_CrossSellingABI__c &lt;= 10),
																				IMAGE(&apos;/resource/CS_4_4&apos;, &quot;4/4&quot;,18,18), NULL
																)
												)
								)
				),
				IF (
								OR (
												TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Private&apos;, 
												TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Institutional Wealth&apos;,
												TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Lower Private&apos;,
												TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Private Sviluppo&apos;,
												TEXT(CRM_Account__r.ModelloDiServizio__c) = &apos;Key Client Privati&apos;
								),			
								IF (
												OR(CRM_CrossSellingABI__c = 3, CRM_CrossSellingABI__c = 4),
												IMAGE(&apos;/resource/CS_1_4&apos;, &quot;1/4&quot;,18,18),
												IF (
																AND (CRM_CrossSellingABI__c &gt;= 5, CRM_CrossSellingABI__c &lt;= 7),
																IMAGE(&apos;/resource/CS_2_4&apos;, &quot;2/4&quot;,18,18),
																IF (
																				AND (CRM_CrossSellingABI__c &gt;= 8, CRM_CrossSellingABI__c &lt;= 10),
																				IMAGE(&apos;/resource/CS_3_4&apos;, &quot;3/4&quot;,18,18),NULL
																)
												)
								),
								NULL
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula icona percentuale CS - parte 2</label>
    <type>Text</type>
</CustomField>