BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormulaLinkPEG__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaLinkPEG__c</fullName>
    <formula>HYPERLINK( CRM_LinkPEG__c , &apos;Link PEG&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Link PEG</label>
    <type>Text</type>
</CustomField>