BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormulastatoAmministrativo__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulastatoAmministrativo__c</fullName>
    <formula>IF (
TEXT(CRM_StatusPosizione__c) = &apos;Giallo&apos;,
&apos;Past Due Iniziale&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Grigio&apos;,
&apos;Sorveglianza&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Nero&apos;,
&apos;Inadempienze probabili&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Rosso&apos;,
&apos;Scadute e/o sconfinanti deteriorate&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Verde&apos;,
&apos;Regolari&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Viola&apos;,
&apos;Sofferenze&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Rosso Scuro&apos;,
&apos;Inadempienze probabili&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Arancio&apos;,
&apos;Past Due 30&apos;,
IF (
TEXT(CRM_StatusPosizione__c) = &apos;Arancio Scuro&apos;,
&apos;Rischio Alto&apos;,
NULL
)
)
)
)
)
)
)
)
)</formula>
    <label>statoAmministrativo</label>
    <type>Text</type>
</CustomField>