BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormulaStatusPosizione__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaStatusPosizione__c</fullName>
    <formula>IF (
				TEXT(CRM_StatoAmministrativo__c) = &apos;Regolari&apos;, &apos;Verde&apos;,
				IF (
								TEXT(CRM_StatoAmministrativo__c) = &apos;Sorveglianza&apos;, &apos;Grigio&apos;,
								IF (
												TEXT(CRM_StatoAmministrativo__c) = &apos;Past Due Iniziale&apos;, &apos;Giallo&apos;,
												IF (
																TEXT(CRM_StatoAmministrativo__c) = &apos;Past Due 30&apos;, &apos;Arancio&apos;,
																IF (
																				TEXT(CRM_StatoAmministrativo__c) = &apos;Rischio Alto&apos;, &apos;Arancio Scuro&apos;,
																				IF (
																								TEXT(CRM_StatoAmministrativo__c) = &apos;Scadute e/o sconfini deteriorate&apos;, &apos;Rosso&apos;,
																								IF (
																												TEXT(CRM_StatoAmministrativo__c) = &apos;Inadempienze probabili&apos;, &apos;Rosso Scuro&apos;,
																												IF (
																																TEXT(CRM_StatoAmministrativo__c) = &apos;Sofferenze&apos;, &apos;Viola&apos;, NULL			
																												)
																								)
																				)
																)
												)
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula status posizione</label>
    <type>Text</type>
</CustomField>