BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_FormulaStatusPosizionePDF__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaStatusPosizionePDF__c</fullName>
    <formula>IF (
ISBLANK(TEXT(CRM_StatusPosizione__c)) = false,
TEXT(CRM_StatusPosizione__c) + &quot; &quot; + &quot;-&quot; + &quot; &quot; + CRM_FormulastatoAmministrativo__c,
&apos;-&apos;
)</formula>
    <label>Status Posizione</label>
    <type>Text</type>
</CustomField>