BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Gestioni__c.field-meta.xml
<CustomField>
    <fullName>CRM_Gestioni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gestioni</label>
    <type>Checkbox</type>
</CustomField>