BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_GestioniPatrimoniali__c.field-meta.xml
<CustomField>
    <fullName>CRM_GestioniPatrimoniali__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gestioni patrimoniali mobiliari</label>
    <type>Checkbox</type>
</CustomField>