BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Giudizio__c.field-meta.xml
<CustomField>
    <fullName>CRM_Giudizio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEG - Giudizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>