BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_GlobalAdvisory__c.field-meta.xml
<CustomField>
    <fullName>CRM_GlobalAdvisory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Advisory</label>
    <type>Checkbox</type>
</CustomField>