BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_GPFinAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_GPFinAP__c</fullName>
    <label>GP - fine AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>