BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_GPMeseCorrente__c.field-meta.xml
<CustomField>
    <fullName>CRM_GPMeseCorrente__c</fullName>
    <label>GP - mese corrente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>