BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_GPSmAP__c.field-meta.xml
<CustomField>
    <fullName>CRM_GPSmAP__c</fullName>
    <label>GP - stesso mese AP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>