BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_Grup_FlussoCR_CrdtCass_Uti__c.field-meta.xml
<CustomField>
    <fullName>CRM_Grup_FlussoCR_CrdtCass_Uti__c</fullName>
    <label>Utilizzato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>