BPER/DEVF/force-app/main/default/objects/CRM_IndicatoriCliente__c/fields/CRM_GrupCRCrdtCassAcc__c.field-meta.xml
<CustomField>
    <fullName>CRM_GrupCRCrdtCassAcc__c</fullName>
    <label>CR - Crediti per cassa Gruppo - Acc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>